feat: expose setting up future competitions and starting pre-entered competitions as admin routes
